fix overlapping for chat header popover

--- a/client/src/components/chatbox/chatbox.css
+++ b/client/src/components/chatbox/chatbox.css
@@ -184,13 +184,13 @@
     align-items: center;
     flex-direction: column;
     width: 180px;
-    /* height: 100px; */
     top: 100%;
     right: 0;
     border-radius: 7px;
     background-color: rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(7px);
     padding: 7px;
+    z-index: 3;
 }
 
 /* div for message wrapper */
@@ -385,7 +385,6 @@
 
 .chatMessageInput {
     width: 100%;
-    height: 4.5rem;
     font-size: 16px;
     color: #fff;
     padding: 14px;
